src/objects/OpportunityLineItem.object
<CustomObject>
    <fields>
        <fullName>AB2__AB3rdPartyAdServer__c</fullName>
        <label>AB 3rd Party Ad Server</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Atlas</fullName>
                </value>
                <value>
                    <fullName>DFA</fullName>
                </value>
                <value>
                    <fullName>Eyeblaster</fullName>
                </value>
                <value>
                    <fullName>MediaPlexxxx</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AB2__ABAdUnit__c</fullName>
        <label>AB Ad Unit</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>110x75</fullName>
                </value>
                <value>
                    <fullName>120x60</fullName>
                </value>
                <value>
                    <fullName>120x90</fullName>
                </value>
                <value>
                    <fullName>125x125</fullName>
                </value>
                <value>
                    <fullName>130x100</fullName>
                </value>
                <value>
                    <fullName>130x50</fullName>
                </value>
                <value>
                    <fullName>140x200</fullName>
                </value>
                <value>
                    <fullName>145 x 55</fullName>
                </value>
                <value>
                    <fullName>200x200</fullName>
                </value>
                <value>
                    <fullName>220x100</fullName>
                </value>
                <value>
                    <fullName>234x60</fullName>
                </value>
                <value>
                    <fullName>38x38</fullName>
                </value>
                <value>
                    <fullName>400x40</fullName>
                </value>
                <value>
                    <fullName>405x100</fullName>
                </value>
                <value>
                    <fullName>468x60</fullName>
                </value>
                <value>
                    <fullName>600x50</fullName>
                </value>
                <value>
                    <fullName>Text</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AB2__ABBillingModel__c</fullName>
        <description>The AdBook Drop Billing Model</description>
        <inlineHelpText>The AdBook Drop Billing Model</inlineHelpText>
        <label>AB Billing Model</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>DeliveryLifetimeCap</fullName>
                    <default>true</default>
                    <label>DeliveryLifetimeCap</label>
                </value>
                <value>
                    <fullName>NotSpecified</fullName>
                </value>
                <value>
                    <fullName>UpFront</fullName>
                </value>
                <value>
                    <fullName>ProRata</fullName>
                </value>
                <value>
                    <fullName>Special</fullName>
                </value>
                <value>
                    <fullName>DeliveryUncapped</fullName>
                </value>
                <value>
                    <fullName>DeliveryAccrual</fullName>
                </value>
                <value>
                    <fullName>DeliveryProRataLifeTimeCap</fullName>
                </value>
                <value>
                    <fullName>DeliveryPeriodicCap</fullName>
                </value>
                <value>
                    <fullName>ProRataEvenMonths</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AB2__ABCreativeDueDate__c</fullName>
        <label>AB Creative Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AB2__ABDropBilling__c</fullName>
        <description>Deprecated. Use ABBillingModel__c instead.</description>
        <label>Deprecated: AB Drop Billing</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>100% Upfront</fullName>
                </value>
                <value>
                    <fullName>Pro-Rata</fullName>
                    <default>true</default>
                    <label>Pro-Rata</label>
                </value>
                <value>
                    <fullName>Pro-Rata Even Months</fullName>
                </value>
                <value>
                    <fullName>Delivery</fullName>
                </value>
                <value>
                    <fullName>Special</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AB2__ABDropCancelled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Has the drop been cancelled?
Corresponds to the AdBook Drop.ActiveStatus == &apos;Cancelled&apos;</description>
        <inlineHelpText>Has the drop been cancelled?</inlineHelpText>
        <label>AB Drop Cancelled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AB2__ABDropGoals__c</fullName>
        <description>The Goal count for a Drop.</description>
        <inlineHelpText>The Goal count for a Drop.</inlineHelpText>
        <label>AB Drop Goals</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AB2__ABDropIDUnique__c</fullName>
        <description>Shadows the AB DropID field to enforce uniqueness. This field isn&apos;t marked as an External ID so that it doesn&apos;t contribute to the limit per object.</description>
        <inlineHelpText>Shadows the AB DropID field to enforce uniqueness.</inlineHelpText>
        <label>AB DropID Unique</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>AB2__ABDropID__c</fullName>
        <externalId>true</externalId>
        <label>AB DropID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AB2__ABDropNotes__c</fullName>
        <description>AdBook Drop Notes</description>
        <inlineHelpText>AdBook Drop Notes</inlineHelpText>
        <label>AB Drop Notes</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AB2__ABDropPrice__c</fullName>
        <description>AdBook Drop Price from last refresh</description>
        <inlineHelpText>AdBook Drop Price from last refresh</inlineHelpText>
        <label>AB Drop Price</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AB2__ABEndDate__c</fullName>
        <inlineHelpText>Enter the End Date of the drop here.</inlineHelpText>
        <label>AB End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AB2__ABGrossCost__c</fullName>
        <description>The AdBook Net Price adjusted to include the Agency Commission.</description>
        <inlineHelpText>The AdBook Net Price adjusted to include the Agency Commission.</inlineHelpText>
        <label>AB Gross Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AB2__ABMediaElementID__c</fullName>
        <description>The AdBook Media Element Id (Long)</description>
        <inlineHelpText>The AdBook Media Element Identifier</inlineHelpText>
        <label>AB MediaElementID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AB2__ABMediaElementPath__c</fullName>
        <label>AB Media Element Path</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AB2__ABMediaElement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The AdBook Media Element for the drop.</description>
        <inlineHelpText>Link to the Salesforce record for AdBook Media Element</inlineHelpText>
        <label>AB MediaElement</label>
        <referenceTo>AB2__MediaElement__c</referenceTo>
        <relationshipLabel>Opportunity Drops</relationshipLabel>
        <relationshipName>OpportunityLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AB2__ABPackageDrop__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>AdBook Package Drop. Used if the Package Drop Components are stored in OLI records.</description>
        <inlineHelpText>AdBook Package Drop</inlineHelpText>
        <label>AB Package Drop</label>
        <referenceTo>AB2__AdBookPackageDrop__c</referenceTo>
        <relationshipLabel>Opportunity Product</relationshipLabel>
        <relationshipName>OpportunityLineItem</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AB2__ABPackagePrice__c</fullName>
        <description>The AdBook Working User Price to override the standard pricing for Package Drops</description>
        <inlineHelpText>The AdBook Price to override the standard pricing for Package Drops</inlineHelpText>
        <label>AB Package Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AB2__ABParentPackageID__c</fullName>
        <description>AdBook Parent Package Media Element ID. This field must be populated to correctly associate a package component drop stored as an OLI with the parent package.</description>
        <label>AB Package Media Element ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AB2__ABParentPackageOpportunityLineItemID__c</fullName>
        <description>(Deprecated) Replaced by ABPackageDrop__c which is a direct lookup to the package drop.
ID of the Parent Package (if applicable)</description>
        <label>(Deprecated) AB Package Product ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AB2__ABPayType__c</fullName>
        <description>Billing Category - Paid For / Value  Add / Make Good / Remnant</description>
        <inlineHelpText>AdBook Billing Category</inlineHelpText>
        <label>AB Pay Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>PaidFor</fullName>
                </value>
                <value>
                    <fullName>ValueAdd</fullName>
                </value>
                <value>
                    <fullName>MakeGood</fullName>
                </value>
                <value>
                    <fullName>Remnant</fullName>
                </value>
                <value>
                    <fullName>TBD</fullName>
                </value>
                <value>
                    <fullName>Barter</fullName>
                </value>
                <value>
                    <fullName>Promo</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AB2__ABPriceTypeRecord__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The AdBook Price Type. Determines the AB Price Calculation Type.</description>
        <inlineHelpText>The AdBook Price Type. Determines the AB Price Calculation Type.</inlineHelpText>
        <label>AB Price Type</label>
        <referenceTo>AB2__AdBookPriceType__c</referenceTo>
        <relationshipLabel>Opportunity Product</relationshipLabel>
        <relationshipName>OpportunityLineItem</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AB2__ABPriceType__c</fullName>
        <description>The AdBook PriceType that is used for pricing calculations</description>
        <inlineHelpText>The AdBook PriceType that is used for pricing calculations</inlineHelpText>
        <label>AB Price Calculation Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CPM</fullName>
                </value>
                <value>
                    <fullName>CPC</fullName>
                </value>
                <value>
                    <fullName>Flat Rate</fullName>
                </value>
                <value>
                    <fullName>CPZ</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AB2__ABQuantityZero__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is the AdBook drop quantity zero?
Allows for zero quantity drops. The Salesforce Quantity field will be set to 1 in these cases.</description>
        <inlineHelpText>Is the AdBook drop quantity zero?</inlineHelpText>
        <label>AB Quantity Zero</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AB2__ABStartDate__c</fullName>
        <inlineHelpText>Enter the Start Date of the drop here.</inlineHelpText>
        <label>AB Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AB2__ABUpdateFromCode__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When set to true(checked) indicates that the operation being performed on the OpportunityLineItem is triggered from code and should not result in an automated Sync/Rollup action.
This field should only be set from code and will be cleared by a trigger when used.</description>
        <label>AB UpdateFromCode</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AB2__AB_Synchronization_Issue__c</fullName>
        <defaultValue>false</defaultValue>
        <description>In the event of a synchronization issue creating this drop in AdBook this record will be prevented from further sync operations until linked to the correct record.</description>
        <inlineHelpText>In the event of a synchronization issue creating this drop in AdBook this record will be prevented from further sync operations until linked to the correct record.</inlineHelpText>
        <label>AB Synchronization Issue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AB2__CPM_Cost_per_1000__c</fullName>
        <description>The AdBook Working Unit/Net Price. Maps to the AdBook Drop.Price field.
For orders with PriceType of CPM this will be the price per 1000 impressions.
For Flat Rate, CPA/CPC and CPL orders this is the price as entered.</description>
        <inlineHelpText>The AdBook Working Unit/Net Price. Maps to the AdBook Drop.Price field.
For orders with PriceType of CPM this will be the price per 1000 impressions.
For Flat Rate, CPA/CPC and CPL orders this is the price as entered.</inlineHelpText>
        <label>AB Working Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AB2__DoNotDeploy_Topic__c</fullName>
        <description>Used for internal testing of multi-select auto mapping only. DO NOT DEPLOY/PACKAGE</description>
        <inlineHelpText>Used for internal testing of multi-select auto mapping only. DO NOT DEPLOY/PACKAGE</inlineHelpText>
        <label>DO NOT DEPLOY</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Option 1</fullName>
                </value>
                <value>
                    <fullName>Option 2</fullName>
                </value>
                <value>
                    <fullName>Option 3</fullName>
                </value>
                <value>
                    <fullName>Option 4</fullName>
                </value>
                <value>
                    <fullName>12345</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AB_End_Date_Conversion__c</fullName>
        <formula>DateTimeValue(AB2__ABEndDate__c) + 0.5</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AB End Date Conversion</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>AB_Start_Date_Conversion__c</fullName>
        <formula>DateTimeValue( AB2__ABStartDate__c ) + 0.5</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AB Start Date Conversion</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <formula>HYPERLINK(Opportunity.AccountId ,

Opportunity.Account.Name )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunity Product</relationshipLabel>
        <relationshipName>R00N80000002yTmxEAE</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Actual_Expense_Less_Labor__c</fullName>
        <label>Actual Expense Less Labor</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Billing_Frequency__c</fullName>
        <label>Billing Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Subscription_Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Annually</fullName>
                    <default>true</default>
                    <label>Annually</label>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>One-Time</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Semi-Annually</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Billing_Price__c</fullName>
        <defaultValue>ListPrice</defaultValue>
        <label>Billing Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Boomi_Integration_Approval_Error__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Boomi Integration Approval Error</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Boomi_Integration_Error_Bypass_OLI__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Boomi Integration Error Bypass OLI</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Brand_Group2__c</fullName>
        <label>Brand Group2</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Residential Construction</fullName>
                </value>
                <value>
                    <fullName>Commercial Design</fullName>
                </value>
                <value>
                    <fullName>Consumer</fullName>
                </value>
                <value>
                    <fullName>Residential Remodeling</fullName>
                </value>
                <value>
                    <fullName>Commercial Construction</fullName>
                </value>
                <value>
                    <fullName>HW Media</fullName>
                </value>
                <value>
                    <fullName>FedEx</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Brand_Group_Test__c</fullName>
        <label>Brand Group WFR</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Brand_Group__c</fullName>
        <formula>Brand_Group_Test__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Brand Group</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Brand__c</fullName>
        <formula>LEFT(DSM_Product_Name__c , 
(FIND(&quot;|&quot;, DSM_Product_Name__c)-2)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Brand</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cancellation_Already_Counted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cancellation Already Counted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cancellation_Date2__c</fullName>
        <formula>IF(Opportunity.CloseDate &gt; FC_Effective_Date__c, Opportunity.CloseDate, FC_Effective_Date__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cancellation Date2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cancellation_Date__c</fullName>
        <formula>IF(Opportunity.CloseDate &gt; FC_End_Date__c, Opportunity.CloseDate, FC_End_Date__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cancellation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cancellation_Status__c</fullName>
        <label>Cancellation Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cancel</fullName>
                </value>
                <value>
                    <fullName>Restructure</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cancelled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is an indicator to show if the subscription for the product should cancel.</description>
        <label>Cancelled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contract_Type__c</fullName>
        <formula>TEXT(Opportunity.Contract_Type__c)</formula>
        <label>Contract Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Creative_Status_Creative_Chase__c</fullName>
        <label>Creative Status (Creative Chase)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Custom_Services__c</fullName>
        <label>Custom Services</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Custom Services</fullName>
                </value>
                <value>
                    <fullName>Custom Services Added</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DSM_Prod_WF_Template_ID__c</fullName>
        <formula>IF(DSM_Product_Lookup__r.WF_Template_ID__c &lt;&gt; &quot;&quot;,
DSM_Product_Lookup__r.WF_Template_ID__c, PricebookEntry.Product2.WF_Template_ID__c )</formula>
        <label>DSM Prod WF Template ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSM_Product_Id__c</fullName>
        <label>HW DSM Product Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSM_Product_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DSM Product Lookup</label>
        <referenceTo>DSM_Products__c</referenceTo>
        <relationshipLabel>Opportunity Product</relationshipLabel>
        <relationshipName>Opportunity_Product</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DSM_Product_Name__c</fullName>
        <label>HW DSM Product Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSM_Product__c</fullName>
        <formula>RIGHT(DSM_Product_Name__c , 
(FIND(&quot;|&quot;, DSM_Product_Name__c)+1) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DSM Product</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DST_Off_End_Date__c</fullName>
        <formula>IF( 
MID(TEXT(HW_Line_Item_End_Date__c),1,4)=&quot;2011&quot;, 
&quot;11/06/2011&quot;, 
IF( 
MID(TEXT(HW_Line_Item_End_Date__c),1,4)=&quot;2012&quot;, 
&quot;11/04/2012&quot;, 
IF( 
MID(TEXT(HW_Line_Item_End_Date__c),1,4)=&quot;2013&quot;, 
&quot;11/03/2013&quot;, 
IF( 
MID(TEXT(HW_Line_Item_End_Date__c),1,4)=&quot;2014&quot;, 
&quot;11/02/2014&quot;, 
IF( 
MID(TEXT(HW_Line_Item_End_Date__c),1,4)=&quot;2015&quot;, 
&quot;11/01/2015&quot;, 
IF( 
MID(TEXT(HW_Line_Item_End_Date__c),1,4)=&quot;2016&quot;, 
&quot;11/06/2016&quot;, 
IF( 
MID(TEXT(HW_Line_Item_End_Date__c),1,4)=&quot;2017&quot;, 
&quot;11/05/2017&quot;, 
IF( 
MID(TEXT(HW_Line_Item_End_Date__c),1,4)=&quot;2018&quot;, 
&quot;11/04/2018&quot;, 
IF( 
MID(TEXT(HW_Line_Item_End_Date__c),1,4)=&quot;2019&quot;, 
&quot;11/03/2019&quot;, 
IF( 
MID(TEXT(HW_Line_Item_End_Date__c),1,4)=&quot;2020&quot;, 
&quot;11/01/2020&quot;, 
IF( 
MID(TEXT(HW_Line_Item_End_Date__c),1,4)=&quot;2021&quot;, 
&quot;11/07/2021&quot;,
IF( 
MID(TEXT(HW_Line_Item_End_Date__c),1,4)=&quot;2022&quot;, 
&quot;11/06/2022&quot;,  
IF( 
MID(TEXT(HW_Line_Item_End_Date__c),1,4)=&quot;2023&quot;, 
&quot;11/05/2023&quot;, 
IF( 
MID(TEXT(HW_Line_Item_End_Date__c),1,4)=&quot;2024&quot;, 
&quot;11/03/2024&quot;, 
IF( 
MID(TEXT(HW_Line_Item_End_Date__c),1,4)=&quot;2025&quot;, 
&quot;11/02/2025&quot;, 
IF( 
MID(TEXT(HW_Line_Item_End_Date__c),1,4)=&quot;2026&quot;, 
&quot;11/01/2026&quot;, 
IF( 
MID(TEXT(HW_Line_Item_End_Date__c),1,4)=&quot;2027&quot;, 
&quot;11/07/2027&quot;, 
IF( 
MID(TEXT(HW_Line_Item_End_Date__c),1,4)=&quot;2028&quot;, 
&quot;11/05/2028&quot;, 
IF( 
MID(TEXT(HW_Line_Item_End_Date__c),1,4)=&quot;2029&quot;, 
&quot;11/04/2029&quot;, 
IF( 
MID(TEXT(HW_Line_Item_End_Date__c),1,4)=&quot;2030&quot;, 
&quot;11/03/2030&quot;, 
&quot;Need More Dates&quot; 
))))))))))))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DST Off End Date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DST_Off_Start_Date__c</fullName>
        <formula>IF( 
MID(TEXT(HW_Line_Item_Start_Date__c),1,4)=&quot;2011&quot;, 
&quot;11/06/2011&quot;,
IF( 
MID(TEXT(HW_Line_Item_Start_Date__c),1,4)=&quot;2012&quot;, 
&quot;11/04/2012&quot;, 
IF( 
MID(TEXT(HW_Line_Item_Start_Date__c),1,4)=&quot;2013&quot;, 
&quot;11/03/2013&quot;, 
IF( 
MID(TEXT(HW_Line_Item_Start_Date__c),1,4)=&quot;2014&quot;, 
&quot;11/02/2014&quot;, 
IF( 
MID(TEXT(HW_Line_Item_Start_Date__c),1,4)=&quot;2015&quot;, 
&quot;11/01/2015&quot;, 
IF( 
MID(TEXT(HW_Line_Item_Start_Date__c),1,4)=&quot;2016&quot;, 
&quot;11/06/2016&quot;, 
IF( 
MID(TEXT(HW_Line_Item_Start_Date__c),1,4)=&quot;2017&quot;, 
&quot;11/05/2017&quot;, 
IF( 
MID(TEXT(HW_Line_Item_Start_Date__c),1,4)=&quot;2018&quot;, 
&quot;11/04/2018&quot;, 
IF( 
MID(TEXT(HW_Line_Item_Start_Date__c),1,4)=&quot;2019&quot;, 
&quot;11/03/2019&quot;, 
IF( 
MID(TEXT(HW_Line_Item_Start_Date__c),1,4)=&quot;2020&quot;, 
&quot;11/01/2020&quot;, 
IF( 
MID(TEXT(HW_Line_Item_Start_Date__c),1,4)=&quot;2020&quot;, 
&quot;11/01/2020&quot;, 
IF( 
MID(TEXT(HW_Line_Item_Start_Date__c),1,4)=&quot;2021&quot;, 
&quot;11/07/2021&quot;, 
IF( 
MID(TEXT(HW_Line_Item_Start_Date__c),1,4)=&quot;2022&quot;, 
&quot;11/06/2022&quot;, 
IF( 
MID(TEXT(HW_Line_Item_Start_Date__c),1,4)=&quot;2023&quot;, 
&quot;11/05/2023&quot;, 
IF( 
MID(TEXT(HW_Line_Item_Start_Date__c),1,4)=&quot;2024&quot;, 
&quot;11/03/2024&quot;, 
IF( 
MID(TEXT(HW_Line_Item_Start_Date__c),1,4)=&quot;2025&quot;, 
&quot;11/02/2025&quot;, 
IF( 
MID(TEXT(HW_Line_Item_Start_Date__c),1,4)=&quot;2026&quot;, 
&quot;11/01/2026&quot;, 
IF( 
MID(TEXT(HW_Line_Item_Start_Date__c),1,4)=&quot;2027&quot;, 
&quot;11/07/2027&quot;, 
IF( 
MID(TEXT(HW_Line_Item_Start_Date__c),1,4)=&quot;2028&quot;, 
&quot;11/05/2028&quot;, 
IF( 
MID(TEXT(HW_Line_Item_Start_Date__c),1,4)=&quot;2029&quot;, 
&quot;11/04/2029&quot;, 
IF( 
MID(TEXT(HW_Line_Item_Start_Date__c),1,4)=&quot;2030&quot;, 
&quot;11/03/2030&quot;, 
&quot;Need More Dates&quot; 
)))))))))))))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DST Off Start Date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DST_On_End_Date__c</fullName>
        <formula>IF( 
MID(TEXT(HW_Line_Item_End_Date__c),1,4)=&quot;2011&quot;, 
&quot;03/13/2011&quot;, 
IF( 
MID(TEXT(HW_Line_Item_End_Date__c),1,4)=&quot;2012&quot;, 
&quot;03/11/2012&quot;, 
IF( 
MID(TEXT(HW_Line_Item_End_Date__c),1,4)=&quot;2013&quot;, 
&quot;03/10/2013&quot;, 
IF( 
MID(TEXT(HW_Line_Item_End_Date__c),1,4)=&quot;2014&quot;, 
&quot;03/09/2014&quot;, 
IF( 
MID(TEXT(HW_Line_Item_End_Date__c),1,4)=&quot;2015&quot;, 
&quot;03/08/2015&quot;, 
IF( 
MID(TEXT(HW_Line_Item_End_Date__c),1,4)=&quot;2016&quot;, 
&quot;03/13/2016&quot;, 
IF( 
MID(TEXT(HW_Line_Item_End_Date__c),1,4)=&quot;2017&quot;, 
&quot;03/12/2017&quot;, 
IF( 
MID(TEXT(HW_Line_Item_End_Date__c),1,4)=&quot;2018&quot;, 
&quot;03/11/2018&quot;, 
IF( 
MID(TEXT(HW_Line_Item_End_Date__c),1,4)=&quot;2019&quot;, 
&quot;03/10/2019&quot;, 
IF( 
MID(TEXT(HW_Line_Item_End_Date__c),1,4)=&quot;2020&quot;, 
&quot;03/08/2020&quot;,  
IF( 
MID(TEXT(HW_Line_Item_End_Date__c),1,4)=&quot;2021&quot;, 
&quot;03/14/2021&quot;, 
IF( 
MID(TEXT(HW_Line_Item_End_Date__c),1,4)=&quot;2022&quot;, 
&quot;03/13/2022&quot;,
IF( 
MID(TEXT(HW_Line_Item_End_Date__c),1,4)=&quot;2023&quot;, 
&quot;03/12/2023&quot;,
IF( 
MID(TEXT(HW_Line_Item_End_Date__c),1,4)=&quot;2024&quot;, 
&quot;03/10/2024&quot;,
IF( 
MID(TEXT(HW_Line_Item_End_Date__c),1,4)=&quot;2025&quot;, 
&quot;03/09/2025&quot;,
IF( 
MID(TEXT(HW_Line_Item_End_Date__c),1,4)=&quot;2026&quot;, 
&quot;03/08/2026&quot;,
IF( 
MID(TEXT(HW_Line_Item_End_Date__c),1,4)=&quot;2027&quot;, 
&quot;03/14/2027&quot;,
IF( 
MID(TEXT(HW_Line_Item_End_Date__c),1,4)=&quot;2028&quot;, 
&quot;03/12/2028&quot;,
IF( 
MID(TEXT(HW_Line_Item_End_Date__c),1,4)=&quot;2029&quot;, 
&quot;03/11/2029&quot;,
IF( 
MID(TEXT(HW_Line_Item_End_Date__c),1,4)=&quot;2030&quot;, 
&quot;03/10/2030&quot;,
&quot;Need More Dates&quot; 
))))))))))))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DST On End Date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DST_On_Start_Date__c</fullName>
        <formula>IF( 
MID(TEXT(HW_Line_Item_Start_Date__c),1,4)=&quot;2011&quot;, 
&quot;03/13/2011&quot;, 
IF( 
MID(TEXT(HW_Line_Item_Start_Date__c),1,4)=&quot;2012&quot;, 
&quot;03/11/2012&quot;, 
IF( 
MID(TEXT(HW_Line_Item_Start_Date__c),1,4)=&quot;2013&quot;, 
&quot;03/10/2013&quot;, 
IF( 
MID(TEXT(HW_Line_Item_Start_Date__c),1,4)=&quot;2014&quot;, 
&quot;03/09/2014&quot;, 
IF( 
MID(TEXT(HW_Line_Item_Start_Date__c),1,4)=&quot;2015&quot;, 
&quot;03/08/2015&quot;, 
IF( 
MID(TEXT(HW_Line_Item_Start_Date__c),1,4)=&quot;2016&quot;, 
&quot;03/13/2016&quot;,
IF( 
MID(TEXT(HW_Line_Item_Start_Date__c),1,4)=&quot;2017&quot;, 
&quot;03/12/2017&quot;,
IF( 
MID(TEXT(HW_Line_Item_Start_Date__c),1,4)=&quot;2018&quot;, 
&quot;03/11/2018&quot;, 
IF( 
MID(TEXT(HW_Line_Item_Start_Date__c),1,4)=&quot;2019&quot;, 
&quot;03/10/2019&quot;, 
IF( 
MID(TEXT(HW_Line_Item_Start_Date__c),1,4)=&quot;2020&quot;, 
&quot;03/08/2020&quot;,  
IF( 
MID(TEXT(HW_Line_Item_Start_Date__c),1,4)=&quot;2021&quot;, 
&quot;03/14/2021&quot;, 
IF( 
MID(TEXT(HW_Line_Item_Start_Date__c),1,4)=&quot;2022&quot;, 
&quot;03/13/2022&quot;, 
IF( 
MID(TEXT(HW_Line_Item_Start_Date__c),1,4)=&quot;2023&quot;, 
&quot;03/12/2023&quot;, 
IF( 
MID(TEXT(HW_Line_Item_Start_Date__c),1,4)=&quot;2024&quot;, 
&quot;03/10/2024&quot;, 
IF( 
MID(TEXT(HW_Line_Item_Start_Date__c),1,4)=&quot;2025&quot;, 
&quot;03/09/2025&quot;, 
IF( 
MID(TEXT(HW_Line_Item_Start_Date__c),1,4)=&quot;2026&quot;, 
&quot;03/08/2026&quot;, 
IF( 
MID(TEXT(HW_Line_Item_Start_Date__c),1,4)=&quot;2027&quot;, 
&quot;03/14/2027&quot;, 
IF( 
MID(TEXT(HW_Line_Item_Start_Date__c),1,4)=&quot;2028&quot;, 
&quot;03/12/2028&quot;, 
IF( 
MID(TEXT(HW_Line_Item_Start_Date__c),1,4)=&quot;2029&quot;, 
&quot;03/11/2029&quot;, 
IF( 
MID(TEXT(HW_Line_Item_Start_Date__c),1,4)=&quot;2030&quot;, 
&quot;03/10/2030&quot;, 
&quot;Need More Dates&quot; 
))))))))))))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DST On Start Date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delivery_Frequency_del__c</fullName>
        <label>Delivery Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Subscription_Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Weekly</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Semi-Annually</fullName>
                </value>
                <value>
                    <fullName>Annually</fullName>
                </value>
                <value>
                    <fullName>One-Time</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <formula>PricebookEntry.Product2.Description</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Directory_Brand__c</fullName>
        <formula>LEFT( PricebookEntry.Product2.Name , FIND(&quot;|&quot;,PricebookEntry.Product2.Name)-2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Directory Brand</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Directory_Categories__c</fullName>
        <label>Directory Categories</label>
        <length>3200</length>
        <type>LongTextArea</type>
    </fields>
</CustomObject>